<resources>
    <string name="app_name">Toeic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!--    PART_NAME-->
    <string name="part_one">Photo</string>
    <string name="part_two">Question-Response</string>
    <string name="part_three">Short conversation</string>
    <string name="part_four">Short talk</string>
    <string name="part_five">Incomplete Sentences</string>
    <string name="part_six">Text Completion</string>
    <string name="part_seven">Reading</string>

    <!--    IMAGE -->
    <string name="image_part_one">Image part one</string>

    <!-- ANSWER -->
    <string name="A">A.</string>
    <string name="B">B.</string>
    <string name="C">C.</string>
    <string name="D">D.</string>

    <!-- MP3 CONTROL -->
    <string name="play_mp3">Play mp3</string>
    <string name="pause">Pause</string>

    <!-- BUTTON -->
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="image">Image</string>
    <string name="finish">Finish</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    <!-- RESULT -->
    <string name="result">Result</string>
    <string name="old_result">Old result</string>
    <string name="current_result">Current result</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="correct_number">Correct %1$d question </string>
    <string name="wrong_number">Wrong %1$d question</string>
    <string name="compare_results">Compare the results of the last exam</string>

    <!-- LABEL -->
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="username">Username</string>
    <string name="search">Search</string>
    <string name="word_not_found">Word not found</string>
    <string name="word_mean">Word mean</string>

    <!-- TIME -->
    <string name="end_time">00:00:00</string>

    <!-- TOAST -->
    <string name="register_success">Register_success</string>
    <string name="confirm_password_not_match">Confirm password not match</string>

    <!-- MENU -->
    <string name="do_exam">Practice part</string>
    <string name="do_test">Do full test</string>
    <string name="search_word">Search word</string>

    <!-- EXAM -->
    <string name="exam_list">Exam list</string>
</resources>
