<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="4"
        android:contentDescription="@string/image_part_one" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <RadioButton
            android:id="@+id/radioButtonA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/A" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/gray" />

        <RadioButton
            android:id="@+id/radioButtonB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/B" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/gray" />

        <RadioButton
            android:id="@+id/radioButtonC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/C" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/gray" />

        <RadioButton
            android:id="@+id/radioButtonD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/D" />
    </RadioGroup>


    <SeekBar
        android:id="@+id/mp3SeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/playMp3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/play_mp3" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/submit" />

        <Button
            android:id="@+id/backQuestion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/back" />

        <Button
            android:id="@+id/nextQuestion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/next" />

    </LinearLayout>
</LinearLayout>